--- a/pet-clinic-web/src/main/resources/templates/vets/index.html
+++ b/pet-clinic-web/src/main/resources/templates/vets/index.html
@@ -6,6 +6,23 @@
 </head>
 <body>
 	<h1 th:text="'List of Vets'">List of Vets...</h1>
+	
+	<table>
+		<thead>
+			<tr>
+				<th>ID</th>
+				<th>First Name</th>
+				<th>Last Name</th>
+			</tr>
+		</thead>
+		<tbody>
+			<tr th:each="vets : ${vets}">
+				<th th:text="${vets?.id}">1</th>
+				<th th:text="${vets?.firstName}">Jin</th>
+				<th th:text="${vets?.lastName}">Freaks</th>
+			</tr>
+		</tbody>
+	</table>
 
 </body>
 </html>
