--- a/pet-clinic-web/src/main/resources/templates/index.html
+++ b/pet-clinic-web/src/main/resources/templates/index.html
@@ -10,8 +10,8 @@
 
 	<div class="row">
 		<div class="col-md-12">
-			<img class="img-responsive" src="../static/resources/images/pets.png"
-				th:src="@{/resources/images/pets.png}" />
+			<img class="img-responsive" src="../static/images/pets.png"
+				th:src="@{/images/pets.png}" />
 		</div>
 	</div>
 
