--- a/pet-clinic-web/src/main/resources/templates/vets/index.html
+++ b/pet-clinic-web/src/main/resources/templates/vets/index.html
@@ -1,26 +1,27 @@
 <!DOCTYPE html>
 <html lang="en" xmlns:th="http://www.thymeleaf.org"
-  th:replace="~{fragments/layout :: layout (~{::body},'vets')}">
+	th:replace="~{fragments/layout :: layout (~{::body},'vets')}">
 <head>
 <meta charset="UTF-8">
 <title>List of Vets</title>
 </head>
 <body>
 	<h2 th:text="'List of Vets'">List of Vets...</h2>
-	
+
 	<table id="vets" class="table table-striped">
 		<thead>
 			<tr>
-				<th>ID</th>
-				<th>First Name</th>
-				<th>Last Name</th>
+				<th>Name</th>
+				<th>Specialties</th>
 			</tr>
 		</thead>
 		<tbody>
-			<tr th:each="vets : ${vets}">
-				<th th:text="${vets?.id}">1</th>
-				<th th:text="${vets?.firstName}">Jin</th>
-				<th th:text="${vets?.lastName}">Freaks</th>
+			<tr th:each="vet : ${vets}">
+				<td th:text="${vet.firstName + ' ' + vet.lastName}"></td>
+				<td>
+				<span th:each="specialty : ${vet.specialities}" th:text="${specialty.description + ' '}"></span>
+				<span th:if="${vet?.specialities?.size() == 0}">none</span>
+				</td>
 			</tr>
 		</tbody>
 	</table>
